feat: add protected clients data loading
